# commandeck

./: .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  llms.txt  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  ci.yml  homebrew-bump.yml  landing-page.yml
landing/: next.config.ts  package.json  pnpm-lock.yaml
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/components/: CTA.tsx  Comparison.tsx  DashboardMockup.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Install.tsx  Integrations.tsx  Navbar.tsx  TechStack.tsx  Testimonials.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  github.rs  linear.rs  mod.rs
src/components/: CommandPalette.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/layout/__tests__/: Sidebar.test.tsx
src/components/onboarding/: OnboardingWizard.tsx
src/components/views/: InboxView.tsx  PullRequestsView.tsx  SessionPanel.tsx  SessionsView.tsx  SettingsView.tsx  TicketsView.tsx
src/components/views/__tests__/: PullRequestsView.test.tsx  TicketsView.test.tsx
src/hooks/: usePullRequests.ts  useSessionEvents.ts  useTickets.ts
src/stores/: appStore.ts  sessionStore.ts  settingsStore.ts
src/stores/__tests__/: appStore.test.ts  settingsStore.test.ts
src/test/: utils.tsx
src/types/: index.ts
www/: index.html
