[package]
name = "commandeck"
version = "0.2.0"
description = "Unified work dashboard with AI dispatch"
authors = ["Priyanshu"]
license = "AGPL-3.0"
repository = "https://github.com/Priyans-hu/commandeck"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "commandeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
